--- a/jenkins/Choice/JenkinsFile
+++ b/jenkins/Choice/JenkinsFile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     parameters {
-        string(defaultValue: "TEST", description: "Which Environment to deploy it?", name: "deployEnv")
+        choice(choices:["TEST","DEV","QA","PRE-PROD","PROD"], description: "Which Environment to deploy it?", name: "deployEnv")
     }
 
     stages {
